# cpp-xpx-chain-sdk

./: .gitignore  .gitmodules  CMakeGlobalFunctions.cmake  CMakeLists.txt  README.md
cmake/: CMakeLists-rapidjson.txt.in  CheckFeatures.cmake  cpp-xpx-chain-sdk-config.cmake.in  nem2-sdk-cpp-config.cmake.in  xpx-chain-sdk-cpp-config.cmake.in
examples/: bonded_aggregate_transaction.cpp  get_block.cpp  liquidity_provider_transactions.cpp
include/nemcpp/: client.h  config.h  exceptions.h  message.cpp  message.h  sdk.h  traits.h  types.h
include/nemcpp/client/: account_service.h  blockchain.h  blockchain_service.h  mosaic_service.h  namespace_service.h  network_service.h  transaction_service.h
include/nemcpp/contract/: ContractService.cpp  ContractService.h
include/nemcpp/crypto/: hash.h  key_pair.h  private_key.h  secure_zero.h  signer.h
include/nemcpp/model/account/: account.h  account_info.h  account_properties.h  account_property.h  address.h  multiple_account_info.h  multisig_graph.h  multisig_info.h  public_account.h
include/nemcpp/model/blockchain/: block.h  height.h  multiple_block.h  score.h
include/nemcpp/model/message/: message.cpp  message.h
include/nemcpp/model/mosaic/: mosaic.h  mosaic_name.h  mosaic_names.h  mosaic_property.h  multiple_mosaic.h
include/nemcpp/model/namespace/: multiple_namespace_info.h  namespace.h  namespace_info.h  namespace_name.h  namespace_names.h  namespace_path.h
include/nemcpp/model/network/: network_info.h
include/nemcpp/model/transaction/: account_link_transaction.h  account_link_transaction_types.h  account_property_transaction.h  account_property_transaction_types.h  address_alias_transaction.h  aggregate_transaction.h  aggregate_transaction_types.h  alias_transaction_base.h  alias_transaction_types.h  basic_transaction.h  embedded_transaction.h  lock_funds_transaction.h  modify_multisig_account_transaction.h  modify_multisig_account_transaction_types.h  mosaic_alias_transaction.h  mosaic_definition_transaction.h  mosaic_supply_change_transaction.h  mosaic_supply_change_transaction_types.h  register_namespace_transaction.h  secret_hash_algorithm.h  secret_lock_transaction.h  secret_proof_transaction.h  transaction.h  transaction_info.h  transaction_signing.h  transaction_type.h  transfer_transaction.h
include/nemcpp/model/transaction_simple/: account_link_transaction_types.h  account_property_transaction_types.h  aggregate_transaction_types.h  alias_transaction_types.h  modify_multisig_account_transaction_types.h  mosaic_supply_change_transaction_types.h  secret_hash_algorithm.h  transaction.h  transaction_container.h  transaction_info.h  transaction_status.h  transaction_type.h
include/nemcpp/service/: http.h  read_result.h  serialization.h
include/nemcpp/utils/: HexParser.h  base32.h  bitwise_enum.h  buffer.h  bytes_to_string.h  comparator.h  format.h  hashable_array.h  hasher.h  lazy.h  network_time.h  noncopyable.h
include/xpxchaincpp/: client.h  config.h  exceptions.h  sdk.h  traits.h  types.h
include/xpxchaincpp/client/: account_service.h  blockchain_service.h  liquidity_provider_service.h  mosaic_service.h  namespace_service.h  network_service.h  notification_service.h  storage_service.h  storagev2_service.h  supercontract_v2_service.h  transaction_service.h
include/xpxchaincpp/crypto/: hash.h  key_pair.h  private_key.h  secure_zero.h  signer.h
include/xpxchaincpp/model/account/: account.h  account_info.h  account_names.h  account_properties.h  account_property.h  address.h  multiple_account_info.h  multisig_graph.h  multisig_info.h  public_account.h
include/xpxchaincpp/model/blockchain/: block.h  height.h  multiple_block.h  score.h  storage_info.h
include/xpxchaincpp/model/liquidity_provider/: liquidity_provider.h  liquidity_providers_page.h
include/xpxchaincpp/model/message/: message.h
include/xpxchaincpp/service/: http.h  read_result.h  serialization.h
include/xpxchaincpp/utils/: HexParser.h  base32.h  bitwise_enum.h  buffer.h  bytes_to_string.h  comparator.h  format.h  hashable_array.h  hasher.h  lazy.h  network_time.h  noncopyable.h  paginationOrderingOptions.h
src/infrastructure/binary/: descriptors.h  offsets.h  parser.cpp  parser.h
src/infrastructure/dto/: account_info_dto.cpp  account_info_dto.h  block_dto.cpp  block_dto.h  height.cpp  height.h  lower_higher.cpp  lower_higher.h  mosaic_dto.cpp  mosaic_dto.h  multiple_blocks_dto.cpp  multiple_blocks_dto.h  multiple_namespace_dto.cpp  multiple_namespace_dto.h  namespace_dto.cpp  namespace_dto.h  transaction_dto.cpp  transaction_dto.h
src/infrastructure/json/: descriptors.h  hex.h  parser.cpp  parser.h  uint32.cpp  uint32.h  uint64.cpp  uint64.h
src/infrastructure/network/: context.cpp  context.h  http.cpp  http.h  websocket.cpp  websocket.h
src/infrastructure/utils/: byte_stream.cpp  byte_stream.h  deserialization_json.cpp  deserialization_json.h  read_json.cpp  read_json.h  serialization.cpp  serialization.h  subscription_manager.cpp  subscription_manager.h  variadic_struct.h
src/sdk/: client.cpp  config.cpp
src/sdk/client/: account_service.cpp  account_service.h  blockchain.cpp  blockchain_impl.h  blockchain_service.cpp  blockchain_service.h  liquidity_provider_service.cpp  mosaic_service.cpp  mosaic_service.h  namespace_service.cpp  namespace_service.h  network_service.cpp  network_service.h  notification_service.cpp  storage_service.cpp  storagev2_service.cpp  supercontract_v2_service.cpp  transaction_service.cpp
src/sdk/crypto/: hash.cpp  key_pair.cpp  private_key.cpp  secure_zero.cpp  signer.cpp
src/sdk/service/: binary_serialization.cpp  read_result.cpp
src/sdk/utils/: HexParser.cpp  base32.cpp  format.cpp  hex_processing.cpp  hex_processing.h  network_time.cpp  read_json.h
tests/: CMakeLists.txt  config.h
tests/client/: CMakeCache.txt  CMakeLists.txt  account_service_tests.cpp  blockchain_service_tests.cpp  mosaic_service_tests.cpp  namespace_service_tests.cpp  network_service_tests.cpp  notification_service_tests.cpp  storagev2_service_tests.cpp  transaction_service_tests.cpp
(+180 files in other folders)
